--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "http://alejet-jllky.run-eu-central1.goorm.io/js/app.js",
+    "/css/app.css": "http://alejet-jllky.run-eu-central1.goorm.io/css/app.css"
 }
